--- a/package.json
+++ b/package.json
@@ -3,17 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "rss:build": "node -r esm scripts/rssGen.js",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "npm run rss:build && next build && next export -o docs"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "date-fns": "^2.14.0",
+    "esm": "^3.2.25",
+    "gray-matter": "^4.0.2",
     "next": "9.3.5",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "remark": "^12.0.0",
+    "remark-html": "^11.0.2",
+    "rss": "^1.2.2",
     "sass": "^1.26.9",
     "tailwindcss": "^1.4.6"
   }
