--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss-preset-env": "^6.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-twitter-embed": "^3.0.3",
     "remark": "^12.0.0",
     "remark-html": "^11.0.2",
     "rss": "^1.2.2",
